--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="#" class="logo">Environment</a>
         <div class="menuToggle" onclick="toggleMenu();"></div>
         <ul class="navigation">
-            <li><a href="#" onclick=>Home</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="#about" onclick=>About</a></li>
             <li><a href="#news" onclick=>News</a></li>
             <li><a href="#gallery" onclick=>Gallery</a></li>
