--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <a href="#" class="logo">Environment</a>
         <div class="menuToggle" onclick="toggleMenu();"></div>
-        <ul class="navigation">
+        <ul class="navigation" onclick="toggleMenu();">
             <li><a href="#">Home</a></li>
             <li><a href="#about" onclick=>About</a></li>
             <li><a href="#news" onclick=>News</a></li>
