--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         Aut doloremque corporis earum error iste vero dignissimos ipsum placeat rerum eum.
                         Fugit voluptate a placeat ullam incidunt ab dolorem odit ipsa.
                     </p>
-                    <a href="#" class="btn body-btn">About Us</a>
+                    <a href="#about" class="btn body-btn">About Us</a>
                 </div>
                 <div class="rest-info-img animate-right">
                     <img src="image/7.jpg" alt="">
@@ -91,7 +91,7 @@
                         Aut doloremque corporis earum error iste vero dignissimos ipsum placeat rerum eum.
                         Fugit voluptate a placeat ullam incidunt ab dolorem odit ipsa.
                     </p>
-                    <a href="#" class="btn body-btn">more news</a>
+                    <a href="#news" class="btn body-btn">more news</a>
                 </div>
                 <div class="image-group padding-right animate-left">
                     <img src="image/10.jpg" alt="">
@@ -153,7 +153,7 @@
                         Aut doloremque corporis earum error iste vero dignissimos ipsum placeat rerum eum.
                         Fugit voluptate a placeat ullam incidunt ab dolorem odit ipsa.
                     </p>
-                    <a href="#" class="btn body-btn">more to know</a>
+                    <a href="#more" class="btn body-btn">more to know</a>
                 </div>
                 <div class="image-group">
                     <img class="animate-top" src="image/2.jpg" alt="">
