--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="about.css">
 </head>
 <body>
     <header>
@@ -33,7 +34,7 @@
             <h2 class="sub-headline">
                 <span class="first-letter"></span>RECO
             </h2>
-            <h1 class="headline" style="color: #fff;">Rweru Environmental Concern</h1>
+            <h1 class="headline">Rweru Environmental Concern</h1>
             <div class="headline-description">
                 <div class="separator">
                     <div class="line line-left"></div>
@@ -42,7 +43,7 @@
                     
                 </div>
                 <div class="single-animation">
-                    <h5 style="color: #fff;">Protect Environment, Protect Your Self</h5>
+                    <h5 style="font-weight: 600;">Protect Environment, Protect Your Self</h5>
                     <a href="#about" class="btn cta-btn">explore</a>
                 </div>
             </div>
@@ -76,7 +77,23 @@
                     <a href="#about" class="btn body-btn">About Us</a>
                 </div>
                 <div class="rest-info-img animate-right">
-                    <img src="image/7.jpg" alt="">
+                    <div class="circles">
+                        <div class="circle circle1">
+                            <img src="image/about.jpg" alt="">
+                        </div>
+                        <div>
+                            <h2 class=" headline-dark">Mr.Habimana Diogene</h2>
+                            <p>
+                                Mr.Habimana Diogene will be known as the founder of Rweru Environmental 
+                                Concern(RECO) and team leader of the RECO, the organisation serving as 
+                                its primary spokesperson.<br>
+                                Mr.Habimana Diogenewill be a full-time public advocatefor the Rweru 
+                                Environmental Concern(RECO).<br>
+                                Mr.Habimana Diogene has a Bachelor's degreein Tourism Mangment from 
+                                Kabale University in Uganda
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -239,13 +256,15 @@
                             <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                             <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                         </ul>
+                        <h4>Phone</h4>
+                        <p style="margin-bottom: 30px; margin-top: -20px;">+250788897994</p>
                     </div>
                     <div class="newsletter-container">
                         <h4>Newsletter</h4>
                         <p>Enter your email for more information</p>
                         <br>
                         <form action="" class="newsletter-form">
-                            <input type="text" class="newsletter-input" placeholder="Your email">
+                            <input type="email" name="email" class="newsletter-input" placeholder="Your email" required>
                             <button class="newsletter-btn" type="submit">
                                 <i class="fas fa-envelope"></i>
                             </button>
