--- a/index.html
+++ b/index.html
@@ -83,12 +83,17 @@
                         </div>
                         <div>
                             <h2 class=" headline-dark">Mr.Habimana Diogene</h2>
+                            <br>
                             <p>
                                 Mr.Habimana Diogene will be known as the founder of Rweru Environmental 
                                 Concern(RECO) and team leader of the RECO, the organisation serving as 
-                                its primary spokesperson.<br>
+                                its primary spokesperson.<br> <br>
+                            </p>
+                            <p>
                                 Mr.Habimana Diogenewill be a full-time public advocatefor the Rweru 
-                                Environmental Concern(RECO).<br>
+                                Environmental Concern(RECO).
+                            </p> <br><br>
+                            <p>
                                 Mr.Habimana Diogene has a Bachelor's degreein Tourism Mangment from 
                                 Kabale University in Uganda
                             </p>
