--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <section class="hero" id="hero">
         <div class="container">
             <h2 class="sub-headline">
-                <span class="first-letter"></span>RECO
+                <span class="first">RECO</span>
             </h2>
-            <h1 class="headline">Rweru Environmental Concern</h1>
+            <h1 class="headline" style="color: #fff;">Rweru Environmental Concern</h1>
             <div class="headline-description">
                 <div class="separator">
                     <div class="line line-left"></div>
@@ -43,7 +43,7 @@
                     
                 </div>
                 <div class="single-animation">
-                    <h5 style="font-weight: 600;">Protect Environment, Protect Your Self</h5>
+                    <h5 style="font-weight: 600; color:#fff">Protect Environment, Protect Your Self</h5>
                     <a href="#about" class="btn cta-btn">explore</a>
                 </div>
             </div>
