--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         share experiences.
                          
                     </p>
-                    <a href="#about" class="btn body-btn">About Us</a>
+                    
                 </div>
                 <div class="rest-info-img animate-right">
                     <div class="circles">
@@ -90,12 +90,12 @@
                                 its primary spokesperson.<br> <br>
                             </p>
                             <p>
-                                Mr.Habimana Diogenewill be a full-time public advocatefor the Rweru 
+                                Mr.Habimana Diogene will be a full-time public advocate for the Rweru 
                                 Environmental Concern(RECO).
                             </p> <br><br>
                             <p>
-                                Mr.Habimana Diogene has a Bachelor's degreein Tourism Mangment from 
-                                Kabale University in Uganda
+                                Mr.Habimana Diogene has a Bachelor's degreein Tourism Management from 
+                                Kabale University (Uganda).
                             </p>
                         </div>
                     </div>
@@ -248,6 +248,8 @@
                         </ul>
                         <h4>Phone</h4>
                         <p style="margin-bottom: 30px; margin-top: -20px;">+250788897994</p>
+                        <h4>Email</h4>
+                        <p style="margin-bottom: 30px; margin-top: -20px; font-size: 16px;">rwenvironemental@yahoo.com</p>
                     </div>
                     <div class="newsletter-container">
                         <div class="showcase-form card2">
