--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         people around lac Rweru <br><br>
                         Our work promotes policies to improve the economical and social well-being
                         of people around the lac rweru. The Rweru Environmental Concern (RECO) brings
-                        together community leaders, civil organisationsand academics to seek solutions 
+                        together community leaders, civil organisations and academics to seek solutions 
                         to common problems of environmental protection, develop global standards,
                         share experiences.
                          
@@ -249,7 +249,7 @@
                         <h4>Phone</h4>
                         <p style="margin-bottom: 30px; margin-top: -20px;">+250788897994</p>
                         <h4>Email</h4>
-                        <p style="margin-bottom: 30px; margin-top: -20px; font-size: 16px;">rwenvironemental@yahoo.com</p>
+                        <p style="margin-bottom: 30px; margin-top: -20px; font-size: 16px;">rwenvironmentalconcern@gmail.com</p>
                     </div>
                     <div class="newsletter-container">
                         <div class="showcase-form card2">
